Fusion-Qa-Final/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <label>Bill To Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Number__c</fullName>
        <label>Bill To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>SAP_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliveries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliveries</label>
        <referenceTo>Deliveries__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>Deliveries__c</referenceTo>
        <relationshipLabel>Invoices (Delivery)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Balance__c</fullName>
        <label>Deposit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Balance__c</fullName>
        <label>Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Slip_ID__c</fullName>
        <formula>Deliveries__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing Slip ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Target</label>
        <referenceTo>Sales_Target__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Number__c</fullName>
        <label>Ship To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Ship To)</relationshipLabel>
        <relationshipName>Invoices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Amount__c</fullName>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <formula>Deliveries__r.Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_To_Number__c</fullName>
        <label>Sold To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Sold To)</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Before_Discount__c</fullName>
        <label>Total Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Balance__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices</label>
    </listViews>
    <listViews>
        <fullName>My_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Invoices</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Balance__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Invoices</label>
    </listViews>
    <listViews>
        <fullName>Past_Due_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Balance__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Invoice_Balance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Completed</value>
        </filters>
        <label>Past Due Invoices</label>
    </listViews>
    <listViews>
        <fullName>Recent_Invoices</fullName>
        <columns>Due_Date__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Balance__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Recent Invoices</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>